--- a/my_notebooks/Tutorial9.ipynb
+++ b/my_notebooks/Tutorial9.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.express as px # Interactive charts and save some coding; .express - high-level api\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change settings to improve default style (optional)\n",
+    "sns.set_style('darkgrid')\n",
+    "matplotlib.rcParams['font.size'] = 14\n",
+    "matplotlib.rcParams['figure.figsize'] = (10, 6)\n",
+    "matplotlib.rcParams['figure.facecolor'] = '#00000000'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
