--- a/Coursework/Exercises2.ipynb
+++ b/Coursework/Exercises2.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "Portfolio Part II\n",
-    ", Hawraa H A E Ali \n",
-    ", up2290783"
+    "- Name: Hawraa H A E Ali \n",
+    "- Student ID: up2290783"
    ]
   },
   {
